--- a/back_end/vercel.json
+++ b/back_end/vercel.json
@@ -1,5 +1,23 @@
-{
-"rewrites": [
-    {"source": "/(.*)", "destination": "/"}
-]
+   {
+  "version": 2,
+  "builds": [
+    {
+      "src": "../front_end/index.html",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "styles/*",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "scripts/*",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
