--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "back_end/index.js"
+      "dest": "/back_end/index.js"
     },
     {
       "src": "/public/(.*)",
@@ -24,7 +24,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "front_end/$1"
+      "dest": "/front_end/$1"
     }
   ]
 }
