--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     },
     {
       "src": "back_end/index.js",
-      "use": "@vercel/node"
+      "use": "@vercel/static"
     }
   ],
   "routes": [
